--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,45 +51,45 @@ services:
     ports:
       - '8083:8080'
 
-#  redis:
-#    image: redis:latest
-#    container_name: redis
-#    profiles: ['dev']
+  redis:
+    image: redis:latest
+    container_name: redis
+    profiles: ['dev']
 #    env_file:
 #      - ./containers/redis/.env.local
-#    ports:
-#      - "6380:6379"
-#    volumes:
-#      - /var/lib/docker/volumes/redisdata:/data
-#    deploy:
-#      # todo оптимизировать
-#      resources:
-#        limits:
-#          cpus: '0.50'
-#          memory: 512M
-#        reservations:
-#          cpus: '0.25'
-#          memory: 256M
-#    command: >
-#      sh -c '
-#        mkdir -p /usr/local/etc/redis &&
-#        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
-#        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
-#        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
-#        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
-#        echo "protected-mode no" >> /usr/local/etc/redis/redis.conf &&
-#        echo "user default on nopass ~* +@all" > /usr/local/etc/redis/users.acl &&
-#        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
-#        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
-#      '
-#    healthcheck:
-#      test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
-#    restart: unless-stopped
-#    tty: true
-#    stdin_open: true
+    ports:
+      - "6380:6379"
+    volumes:
+      - /var/lib/docker/volumes/redisdata:/data
+    deploy:
+      # todo оптимизировать
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+    command: >
+      sh -c '
+        mkdir -p /usr/local/etc/redis &&
+        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "protected-mode no" >> /usr/local/etc/redis/redis.conf &&
+        echo "user default on nopass ~* +@all" > /usr/local/etc/redis/users.acl &&
+        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+      '
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+    tty: true
+    stdin_open: true
 
   api-gateway:
 # todo добавить healthcheck
