#chore: change env file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -156,8 +156,8 @@ services:
     depends_on:
       xray-vpn:
         condition: service_healthy
-#    env_file:
-#      - ./containers/xray-manager/env.local
+    env_file:
+      - ./containers/xray-manager/env.local
 #    environment:
 #      - LOG_PATH = default
     volumes:
